# genai

./: .gitignore  .tool-versions  00_bce_cost_function.ipynb  00_transformers.ipynb  00_vae.ipynb  01_diffusion.ipynb  02_vae.ipynb  02_vqvae.ipynb  03_score_matching.ipynb  03_vqvae.ipynb  04_ddim.ipynb  04_score_matching_base.ipynb  05_dit.ipynb  05_vqgan.ipynb  README.md  pyproject.toml  requirements.txt
face_diffusion/: 00_ffhq_dataset.ipynb  ds.py  train.py
flow/: 00_ode.ipynb  01_flow.ipynb  02_mean_flow.ipynb  02_unet.ipynb  README.md  unet2d.py
flow/mean_flow/: blocks.py  resnet.py  unet2d.py
gans/: 00_gan_loss_understanding.ipynb  README.md  basic.py  wgan_gp.py
progan/: ProGAN.ipynb  README.md  config.py  dl.py  model.py  train.py  utils.py
score/: 00_vector_field.ipynb  01_kde.ipynb  02_guassian_vector_fields.ipynb  02_kde.ipynb  03_score_matching_base.ipynb  04_connecting_denoising_autoencoders_with_sm.ipynb  README.md
var/: 01_vqgan.ipynb  02_label_cond_ar.ipynb  gpt.py  vqgan.py
