[tool.poetry]
name = "genai"
version = "0.1.0"
description = "GANs, VAE and diffusions"
authors = ["Prakash"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "4.7.0.72"
torch = { version = "2.3.1+cu121", source = "torch_cu121" }
loguru = "^0.7.2"
torchvision = { version = "0.18.1+cu121", source = "torch_cu121" } # should be compatible with torch version. 
lightning = "^2.2.5"
datasets = "^2.19.2"
tensorboard = "^2.17.0"



gdown = "^5.2.0"
matplotlib = "^3.9.0"
scipy = "^1.13.1"
gigagan-pytorch = "^0.2.20"
mmengine = "^0.10.4"
[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
notebook = "6.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"